--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- 鼠标点击延迟0.3秒  -->
+  <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <script>
-
+       if('addeventLister' in document){
+         document.addEventListener('DomContentLoaded',function () {
+           FastClick.attach(document.body);
+         },false);
+       }
+       if(!window,Promise){
+         doccument.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>')
+       }
 
 /*  REM 适配*/
     !(function () {
